--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,10 +44,13 @@
     <string name="backup_file_prefix_date_format" translatable="false">dd-MM-yy_HH:mm</string>
     <string name="backup_file_suffix" translatable="false">_RCBackup</string>
     <string name="restore_complete_toast">Restore complete</string>
-    <string name="systemui_prefs">SystemUI prefs</string>
-    <string name="phone_prefs">Phone prefs</string>
-    <string name="framework_prefs">Framework prefs</string>
-    <string name="notification_panel_prefs">Notification panel prefs</string>
+    <string name="systemui_prefs">Statusbar y Recientes</string>
+    <string name="phone_prefs">Teléfono y Ajustes</string>
+    <string name="framework_prefs">Launcher</string>
+    <string name="custom_backgrounds_prefs">Fondos Personalizados</string>
+    <string name="lockscreen_prefs">Pantalla Bloqueo</string>
+    <string name="useful_apps_prefs">Apk´s de usuario</string>
+    <string name="notification_panel_prefs">Panel de Notificaciones</string>
     <string name="more_options">More options</string>
     <string name="set_theme">Set theme</string>
     <string name="backup_and_restore"><![CDATA[Backup & Restore]]></string>
